# HaffmanArchiver

./: CMakeLists.txt
src/: Archiver.cpp  Archiver.h  BinaryHeap.h  BitsReader.cpp  BitsReader.h  BitsWriter.cpp  BitsWriter.h  CMakeLists.txt  HaffmanAlgorithm.cpp  HaffmanAlgorithm.h  main.cpp
tests/: CMakeLists.txt  test_binary_heap.cpp  test_bit_input.cpp  test_bit_output.cpp  test_haffman_algorithm.cpp
